syntax = "proto3";

package service;

enum Visibility {
  VISIBILITY_ALL = 0;
  VISIBILITY_USERS = 1;
  VISIBILITY_WORKERS = 2;
  VISIBILITY_NONE = 3;
}

enum Publish {
  PUBLISH_ALL = 0;
  PUBLISH_SOURCE = 1;
  PUBLISH_CONTAINER = 2;
  PUBLISH_NONE = 3;
}

enum Type {
  STRING = 0;
  INT = 1;
  FLOAT = 2;
  BOOLEAN = 3;
  OBJECT = 4;
}

message Service {
  string name = 1;
  string description = 2;
  Visibility visibility = 3;
  Publish publish = 4;
  map<string, Task> tasks = 5;
  map<string, Event> events = 6;
  map<string, Dependency> dependencies = 7;
}

message Task {
  string name = 1;
  string description = 2;
  bool verifiable = 3;
  bool payable = 4;
  Fee fees = 5;
  map<string, Parameter> inputs = 6;
  map<string, Parameter> outputs = 7;
}

message Fee {
  string developer = 1;
  string validator = 2;
  string executor = 3;
  string emittors = 4;
}

message Event {
  string name = 1;
  string description = 2;
  map<string, Parameter> data = 3;
}

message Parameter {
  string name = 1;
  string description = 2;
  Type type = 3;
  bool optional = 4;
}

message Dependency {
  string key = 1;
  string image = 2;
  repeated string volumes = 3;
  repeated string ports = 4;
  string command = 5;
}